fixed logo valign

--- a/css/style.css
+++ b/css/style.css
@@ -106,11 +106,12 @@ footer.page-footer {
   text-align: center;
 }
 #center-logo{
-  padding-top: 25em;
+  /*padding-top: 25em;*/
+  margin: 0 auto;
 }
 
 #text-logo{
-  max-width: 50%;
+  max-width: 70%;
   display: block;
   margin: 0 auto;
 }
@@ -215,7 +216,7 @@ footer.page-footer {
     max-width: 100% !important;
   }
   #center-logo{
-    padding-top: 21rem;
+    /*padding-top: 21rem;*/
   }
   #index-banner{
     background-image: url("../img/colored_egg_bg_mobile.jpg");
